--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Image Gallery</h1>
+        <h1>cool</h1>
         <div class="gallery">
             <!-- Images added -->
-            <img src="/mnt/data/photo_2024-11-12_16-12-29.jpg" alt="Image 1">
-            <img src="/mnt/data/photo_2025-01-08_23-39-35.jpg" alt="Image 2">
-            <img src="/mnt/data/photo_2025-01-08_23-39-48.jpg" alt="Image 3">
-            <img src="/mnt/data/photo_2025-01-08_23-40-21.jpg" alt="Image 4">
-            <img src="/mnt/data/photo_2025-01-08_23-40-26.jpg" alt="Image 5">
+            <img src="photo_2024-11-12_16-12-29.jpg" alt="Image 1">
+            <img src="photo_2025-01-08_23-39-35.jpg" alt="Image 2">
+            <img src="photo_2025-01-08_23-39-48.jpg" alt="Image 3">
+            <img src="photo_2025-01-08_23-40-21.jpg" alt="Image 4">
+            <img src="photo_2025-01-08_23-40-26.jpg" alt="Image 5">
         </div>
         <div class="video-link">
-            <a href="https://www.youtube.com/watch?v=G9a-wvfgHUM&loop=0" target="_blank">Watch the Video</a>
+            <a href="https://www.youtube.com/watch?v=G9a-wvfgHUM&loop=0" target="_blank">best youtube video in the world</a>
         </div>
     </div>
 </body>
