--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
             <img src="photo_2025-01-08_23-40-26.jpg" alt="Image 5">
         </div>
         <div class="video-link">
-            <a href="https://www.youtube.com/watch?v=G9a-wvfgHUM&loop=0" target="_blank">best youtube video in the world</a>
-        </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/G9a-wvfgHUM?loop=0" 
+        title="YouTube video" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+    </iframe>
+</div>
     </div>
 </body>
 </html>
