--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             padding: 0;
             background-color: #f4f4f9;
             color: #333;
+            position: relative;
+            overflow: hidden;
         }
         .container {
             max-width: 1200px;
@@ -22,52 +24,67 @@
             margin-bottom: 20px;
         }
         .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 15px;
+            position: relative;
+            width: 100%;
+            height: 600px;
         }
         .gallery img {
-            width: 100%;
+            position: absolute;
+            width: 150px;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            animation: randomize 10s infinite;
+        }
+        .video-container {
+            text-align: center;
+            margin-top: 30px;
+            position: relative;
+            z-index: 10;
+        }
+        video {
+            max-width: 60%;
             height: auto;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-        .video-link {
-            text-align: center;
-            margin-top: 30px;
-        }
-        .video-link a {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 18px;
-        }
-        .video-link a:hover {
-            background-color: #0056b3;
+
+        @keyframes randomize {
+            0% {
+                transform: translate(calc(50vw - 75px), calc(50vh - 75px));
+            }
+            25% {
+                transform: translate(10vw, 10vh);
+            }
+            50% {
+                transform: translate(80vw, 30vh);
+            }
+            75% {
+                transform: translate(20vw, 70vh);
+            }
+            100% {
+                transform: translate(calc(50vw - 75px), calc(50vh - 75px));
+            }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>cool</h1>
+        <h1>Image Gallery</h1>
         <div class="gallery">
             <!-- Images added -->
-            <img src="photo_2024-11-12_16-12-29.jpg" alt="Image 1">
-            <img src="photo_2025-01-08_23-39-35.jpg" alt="Image 2">
-            <img src="photo_2025-01-08_23-39-48.jpg" alt="Image 3">
-            <img src="photo_2025-01-08_23-40-21.jpg" alt="Image 4">
-            <img src="photo_2025-01-08_23-40-26.jpg" alt="Image 5">
+            <img src="photo_2024-11-12_16-12-29.jpg" alt="Image 1" style="top: 10%; left: 10%;">
+            <img src="photo_2025-01-08_23-39-35.jpg" alt="Image 2" style="top: 20%; left: 50%;">
+            <img src="photo_2025-01-08_23-39-48.jpg" alt="Image 3" style="top: 40%; left: 30%;">
+            <img src="photo_2025-01-08_23-40-21.jpg" alt="Image 4" style="top: 60%; left: 70%;">
+            <img src="photo_2025-01-08_23-40-26.jpg" alt="Image 5" style="top: 80%; left: 20%;">
         </div>
-        <div class="video-link">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/G9a-wvfgHUM?loop=0" 
-        title="YouTube video" frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-    </iframe>
-</div>
+        <div class="video-container">
+            <video controls>
+                <source src="محمد السليم سيارتي جيب.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
     </div>
 </body>
 </html>
