--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         .gallery {
             position: relative;
             width: 100%;
-            height: 600px;
+            height: 60vh;
         }
         .gallery img {
             position: absolute;
-            width: 150px;
+            width: 10vw;
             height: auto;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -56,14 +56,14 @@
             }
             25% {
                 top: 0;
-                left: calc(100% - 150px);
+                left: calc(100vw - 10vw);
             }
             50% {
-                top: calc(100% - 150px);
-                left: calc(100% - 150px);
+                top: calc(100vh - 10vw);
+                left: calc(100vw - 10vw);
             }
             75% {
-                top: calc(100% - 150px);
+                top: calc(100vh - 10vw);
                 left: 0;
             }
             100% {
@@ -86,6 +86,34 @@
         }
         .gallery img:nth-child(5) {
             animation-delay: 4s;
+        }
+
+        @media (max-width: 768px) {
+            .gallery img {
+                width: 15vw;
+            }
+            @keyframes bounce {
+                0% {
+                    top: 0;
+                    left: 0;
+                }
+                25% {
+                    top: 0;
+                    left: calc(100vw - 15vw);
+                }
+                50% {
+                    top: calc(100vh - 15vw);
+                    left: calc(100vw - 15vw);
+                }
+                75% {
+                    top: calc(100vh - 15vw);
+                    left: 0;
+                }
+                100% {
+                    top: 0;
+                    left: 0;
+                }
+            }
         }
     </style>
 </head>
