--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 
         // Updated media files
         const mediaFiles = [
-            { type: 'image', src: '/mnt/data/photo_2024-11-12_16-12-29.jpg' },
-            { type: 'image', src: '/mnt/data/photo_2025-01-08_23-39-35.jpg' },
-            { type: 'image', src: '/mnt/data/photo_2025-01-08_23-39-48.jpg' },
-            { type: 'image', src: '/mnt/data/photo_2025-01-08_23-40-21.jpg' },
-            { type: 'image', src: '/mnt/data/photo_2025-01-08_23-40-26.jpg' },
-            { type: 'video', src: '/mnt/data/محمد السليم سيارتي جيب.mp4' }
+            { type: 'image', src: 'photo_2024-11-12_16-12-29.jpg' },
+            { type: 'image', src: 'photo_2025-01-08_23-39-35.jpg' },
+            { type: 'image', src: 'photo_2025-01-08_23-39-48.jpg' },
+            { type: 'image', src: 'photo_2025-01-08_23-40-21.jpg' },
+            { type: 'image', src: 'photo_2025-01-08_23-40-26.jpg' },
+            { type: 'video', src: 'محمد السليم سيارتي جيب.mp4' }
         ];
 
         const occupiedAreas = [];
