--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
         }
 
         #container {
-            position: relative;
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100vw;
             height: 100vh;
             border: 10px solid black;
+            box-sizing: border-box;
         }
 
         .image {
