--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Media Layout</title>
     <style>
-        body {
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+        }
+
+        body {
             overflow: hidden;
+            height: 100vh;
         }
 
         #container {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
+            position: relative;
+            width: 100%;
+            height: 100%;
             border: 10px solid black;
-            box-sizing: border-box;
         }
 
         .image {
