--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         .image {
             position: absolute;
             width: 15vw;
-            height: 15vw;
+            height: auto;
             object-fit: cover;
         }
     </style>
