--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             width: 15vw;
             height: auto;
             object-fit: cover;
-            transition: transform 0.1s linear;
         }
     </style>
 </head>
@@ -52,8 +51,8 @@
             return {
                 x: Math.random() * (container.clientWidth - container.clientWidth * 0.15),
                 y: Math.random() * (container.clientHeight - container.clientHeight * 0.15),
-                dx: Math.random() > 0.5 ? 1 : -1,
-                dy: Math.random() > 0.5 ? 1 : -1
+                dx: (Math.random() > 0.5 ? 1 : -1) * 2, // Speed multiplier
+                dy: (Math.random() > 0.5 ? 1 : -1) * 2
             };
         }
 
@@ -78,14 +77,16 @@
 
                 if (x <= 0 || x + img.clientWidth >= container.clientWidth) {
                     image.dx *= -1;
+                    x = Math.max(0, Math.min(container.clientWidth - img.clientWidth, x));
                 }
 
                 if (y <= 0 || y + img.clientHeight >= container.clientHeight) {
                     image.dy *= -1;
+                    y = Math.max(0, Math.min(container.clientHeight - img.clientHeight, y));
                 }
 
-                image.x += image.dx;
-                image.y += image.dy;
+                image.x = x;
+                image.y = y;
 
                 img.style.left = `${image.x}px`;
                 img.style.top = `${image.y}px`;
